@@ -1,6 +1,6 @@
 ! -*- fortran -*-
 ! **********************************************************************
-!  Copyright (c) 2007   The Regents of the University of California.
+!  Copyright (c) 2007,   Lawrence Livermore National Security, LLC.
 !  Produced at the Lawrence Livermore National Laboratory.
 !  Written by the HYPRE team. UCRL-CODE-222953.
 !  All rights reserved.
