@@ -1,6 +1,6 @@
 #!/usr/bin/ksh
 #BHEADER**********************************************************************
-# Copyright (c) 2006   The Regents of the University of California.
+# Copyright (c) 2007, Lawrence Livermore National Security, LLC.
 # Produced at the Lawrence Livermore National Laboratory.
 # Written by the HYPRE team. UCRL-CODE-222953.
 # All rights reserved.
@@ -24,6 +24,7 @@
 #
 # $Revision$
 #EHEADER**********************************************************************
+
 
 # This script will be needed to build hypre with the Babel interface
 # in multiprocessing AIX systems. See the file babel-runtime/HYPRE_README.txt .
